--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,6 @@
-// Vendor
-// ---------------------------------
-
 @import "vendor/normalize";
+@import "./common/global";
+@import "./common/variables";
+@import "./common/fonts";
+@import "./common/container";
+@import "./common/mixins";
