--- a/source/sass/common/container.scss
+++ b/source/sass/common/container.scss
@@ -5,6 +5,9 @@
 
   @media #{$mobile-only} {
     width: 290px;
+    &--full-width {
+      width: 320px;
+    }
   }
 
   @media #{$tablet-only} {
@@ -12,6 +15,6 @@
   }
 
   @media #{$desktop-only} {
-    width: 1130px;
+    width: 1160px;
   }
 }
