--- a/source/sass/common/global.scss
+++ b/source/sass/common/global.scss
@@ -8,9 +8,10 @@ body {
 }
 
 img {
-  max-width: 100%;
+  // max-width: auto;
   max-height: 100%;
   object-fit: contain;
+  display: block;
 }
 
 a {
