--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,13 +4,17 @@
 @import "./common/global";
 @import "./common/fonts";
 @import "./common/container";
+@import "./common/section-title";
+@import "./common/sub-title";
 @import "./blocks/hero/hero";
 @import "./blocks/hero/promo";
 @import "./blocks/hero/hero-header";
 @import "./common/button";
 @import "./blocks/hero/promo-info";
 
-// @import "./blocks/hero/hero-header";
+@import "./blocks/about/about";
+@import "./blocks/about/about-details";
+@import "./blocks/about/video";
 // @import "./blocks/hero/hero-header";
 // @import "./blocks/hero/hero-header";
 // @import "./blocks/hero/hero-header";
