--- a/source/sass/blocks/about/video.scss
+++ b/source/sass/blocks/about/video.scss
@@ -4,6 +4,12 @@
   height: 170px;
 }
 
+.video__preview-wrapper {
+  &--playing {
+    display: none;
+  }
+}
+
 .video__preview-mask {
   position: absolute;
   top: 0;
@@ -26,10 +32,16 @@
   align-items: center;
   justify-content: center;
   background-color: transparent;
+  transition: border 0.3s $smooth;
+
+  &--playing {
+    display: none;
+  }
 
   &::before {
     position: absolute;
     content: "";
+    transition: background 0.3s $smooth, transform 0.3s $smooth;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -41,40 +53,63 @@
   #003EB7);
   }
 
-  &::after {
-    position: absolute;
-    content: "";
-    background: black;
-    width: 12px;
-    height: 12px;
-    mask-image: url("../../__spritemap#sprite-play-mobile");
-    // mask-image: url("../../../img/sprite/play-mobile.svg");
-    mask-repeat: no-repeat;
-    mask-size: contain;
-    mask-position: center;
-    z-index: 3;
+  &:hover {
+    border-color: #10265499;
+  }
+
+  &:hover::before {
+    background: $white-primary;
+  }
+
+  &:hover .video__play-icon{
+    background: #10265499;
+  }
+
+  &:focus-visible {
+    border-color: $primary;
+  }
+
+  &:focus-visible::before {
+    background: #C8C9CC;
+  }
+
+  &:focus-visible .video__play-icon{
+    background: $primary;
+  }
+
+  &:active {
+    border-color: $primary;
+  }
+
+  &:active::before {
+    background: $white-primary;
+    transform:  translate(-50%, -50%) scale(0.8056);
+    // transform: translate(-50%, -50%);
+  }
+
+  &:active .video__play-icon{
+    background: $primary;
   }
 }
 
 .video__play-icon {
-  width: 12px;
+  width: 9px;
   height: 12px;
-  // fill: $white-primary;
-  transition: fill 0.3s $smooth;
-  z-index: 2;
+  transition: background 0.6s $smooth;
+  mask: url("/__spritemap#sprite-play-mobile") right center no-repeat;
+  mask-size: 13px 15px;
+  background: $white-primary;
+  position: relative;
+  right: -2px;
+}
 
-  // mask-image: url("/__spritemap#sprite-play-mobile");
-  // mask-image: url("/source/img/sprite/play-mobile.svg");
-  // mask-repeat: no-repeat;
-  // mask-size: contain;
-  // mask-position: center;
-  // mask-size: 12px 12px;
-  // background: black;
-  // z-index: 2;
-  // display: block;
+.video__video-iframe {
+  display: none;
+  width: 100%;
+  height: 100%;
 
-  &:hover {
-    // fill: #10265499;
+  &--playing {
+    display: block;
   }
 }
 
@@ -88,6 +123,16 @@
     width: 270px;
     height: 170px;
   }
+}
+
+@media #{$desktop-only} {
+  .video {
+    width: 360px;
+    height: 230px;
+    left: 400px;
+    top: 405px;
+    transform: translateX(0);
+  }
 
   .video__play-button {
     width: 100px;
@@ -96,17 +141,18 @@
     &::before {
       width: 72px;
       height: 72px;
+      transition:  transform 0.1s $smooth;
     }
   }
-}
 
-@media #{$desktop-only} {
-  .video {
-    width: 360px;
-    height: 230px;
-    left: 400px;
-    bottom: 125px;
-    // right: 400px;
-    transform: translateX(0);
+  .video__play-icon {
+    width: 17px;
+    height: 17px;
+    mask: url("/__spritemap#sprite-play-desktop");
+    mask-repeat: no-repeat;
+    mask-position: 3px 1px;
+    mask-size: cover;
+    mask-size: 15px 17px;
+    background: $white-primary;
   }
 }
