--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,6 +15,11 @@
 @import "./blocks/about/about";
 @import "./blocks/about/about-details";
 @import "./blocks/about/video";
+
+@import "./blocks/price/price";
+@import "./blocks/price/price-select";
+@import "./blocks/price/price-cards";
+@import "./blocks/price/price-card";
 // @import "./blocks/hero/hero-header";
 // @import "./blocks/hero/hero-header";
 // @import "./blocks/hero/hero-header";
