--- a/source/sass/blocks/price/price-cards.scss
+++ b/source/sass/blocks/price/price-cards.scss
@@ -2,4 +2,11 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
+  display: flex;
+  flex-flow: wrap column;
+  gap: 35px;
+}
+
+.price-card__title {
+
 }
