--- a/source/sass/blocks/price/price.scss
+++ b/source/sass/blocks/price/price.scss
@@ -1,3 +1,15 @@
 .price {
   background-color: $white-secondary;
 }
+
+.price__price-wrapper {
+  padding: 40px 0 40px;
+}
+
+@media #{$not-mobile} {
+  .price__price-wrapper {
+    display: flex;
+    flex-flow: wrap column;
+    align-items: center;
+  }
+}
