--- a/source/sass/blocks/price/price-card.scss
+++ b/source/sass/blocks/price/price-card.scss
@@ -3,7 +3,77 @@
   padding: 50px 42px;
   display: flex;
   flex-flow: wrap column;
-  align-items: center
+  align-items: center;
+  border: solid 7px $white-primary;
+  position: relative;
+
+  &::before {
+    position: absolute;
+    content: "";
+    top: -7px;
+    left: -7px;
+    width: calc(100% + 14px);
+    height: calc(100% + 14px);
+    background: linear-gradient(150deg, #D10A42, #00359F);
+    z-index: 0;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.3s $smooth;
+  }
+
+  &::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $white-primary;
+  }
+
+  &:hover {
+    border-color: transparent;
+  }
+
+  &:hover .price-card__buy-button::after {
+    transform: scaleX(1);
+  }
+
+  &:hover .price-card__buy-button {
+    color: $white-primary;
+    border-color: transparent;
+  }
+
+  &:hover .price-card__buy-button:active {
+    color: #FFFFFF70;
+  }
+
+  &:hover::before {
+    transform: scaleX(1);
+  }
+
+  .price-card__buy-button {
+    &.price-card__buy-button:disabled {
+      background: $white-primary;
+      color: $primary;
+      opacity: 30%;
+      border-color: $primary;
+      cursor: auto;
+
+      &::after {
+        transform: scaleX(0);
+      }
+    }
+  }
+}
+
+.price-card__price-card-content {
+  position: relative;
+  z-index: 2;
+  background-color: $white-primary;
+  width: 100%;
+  height: 100%;
+  text-align: center
 }
 
 .price-card__title {
@@ -56,12 +126,26 @@
 }
 
 @media #{$not-mobile} {
+  .price-card {
+    padding: 65px;
+    width: 380px;
+  }
+
+  .price-card__price-wrapper {
+    margin: 0 0 22px;
+    padding: 0 0 0 42px;
+    min-height: 150px;
+    width: 250px;
+  }
+
   .price-card__title {
     @include apply-styles($tablet-h4);
+    margin: 0 0 22px;
   }
 
   .price-card__description {
     @include apply-styles($universal-medium-text);
+    margin: 0 0 22px;
   }
 
   .price-card__price-shadow {
@@ -70,5 +154,44 @@
 
   .price-card__price {
     @include apply-styles($universal-numbers-medium);
+
+    &::after {
+      background-position: 63px -26px;
+      background-size: 32px 69px;
+      top: 23px;
+    }
+  }
+}
+
+@media #{$desktop-only} {
+  .price-card {
+    width: 360px;
+  }
+
+  .price-card__price-wrapper {
+    margin: 0 0 17px;
+    padding: 0 0 0 32px;
+    width: 230px;
+  }
+
+  .price-card__title {
+    @include apply-styles($desktop-h4);
+    margin: 0 0 17px;
+  }
+
+  .price-card__description {
+    margin: 0 0 17px;
+  }
+
+  .price-card__price-shadow {
+    left: 13px;
+  }
+
+  .price-card__price {
+    &::after {
+      background-position: 63px -26px;
+      background-size: 32px 69px;
+      top: 23px;
+    }
   }
 }
