--- a/source/sass/common/button.scss
+++ b/source/sass/common/button.scss
@@ -10,30 +10,52 @@
   width: 100%;
   padding: 20px 30px;
   transition: color 0.3s $smooth, background 0.3s $smooth, border 0.3s $smooth;
-
-  &:hover {
-
-  }
-
-  &:focus-visible {
-
-  }
-
-  &:active {
-
-  }
-
-  &:active::after {
-
-  }
-
-  &:disabled {
-
-  }
+  cursor: pointer;
 
   &--button-primary {
     color: $primary;
     background-color: $white-primary;
+    position: relative;
+    z-index: 1;
+
+    &::after {
+      position: absolute;
+      content: "";
+      top: -2px;
+      left: -2px;
+      width: calc(100% + 4px);
+      height: calc(100% + 4px);
+      background: linear-gradient(to right, #ED0233, #003EB7);
+      z-index: -1;
+      transform: scaleX(0);
+      transform-origin: left;
+      transition: transform 0.3s $smooth;
+    }
+
+    &:hover::after {
+      transform: scaleX(1);
+    }
+
+    &:hover {
+      color: $white-primary;
+      border-color: transparent;
+    }
+
+    &:focus-visible::after {
+      transform: scaleX(1);
+      background: linear-gradient(to right, #ED0233CC, #003EB7CC);
+    }
+
+    &:focus-visible {
+      color: $white-primary;
+      border-color: transparent;
+    }
+
+    &:disabled {
+      background: $white-primary;
+      color: $primary;
+      opacity: 30%;
+    }
   }
 
   &--button-secondary {
