game markup styles for mobile

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,12 +20,6 @@
 @import "./blocks/price/price-select";
 @import "./blocks/price/price-cards";
 @import "./blocks/price/price-card";
-// @import "./blocks/hero/hero-header";
-// @import "./blocks/hero/hero-header";
-// @import "./blocks/hero/hero-header";
-// @import "./blocks/hero/hero-header";
-// @import "./blocks/hero/hero-header";
-// @import "./blocks/hero/hero-header";
-// @import "./blocks/hero/hero-header";
-// @import "./blocks/hero/hero-header";
-// @import "./blocks/hero/hero-header";
+
+@import "./blocks/games/games";
+@import "./blocks/games/games-promo";
