--- a/source/sass/blocks/price/price-card.scss
+++ b/source/sass/blocks/price/price-card.scss
@@ -128,11 +128,11 @@
     right: -39px;
     content: "";
     width: 30px;
-    height: 100%;
+    height: 33px;
     background-image: url("../../__spritemap#sprite-rouble-mobile");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 24px 210px;
+    background-size: 24px 171px;
   }
 }
 
@@ -176,6 +176,7 @@
       top: 23px;
       right: -44px;
       width: 30px;
+      height: 42px;
     }
   }
 }
