--- a/source/sass/common/global.scss
+++ b/source/sass/common/global.scss
@@ -9,6 +9,7 @@ body {
   color: $primary;
   @include apply-styles($mobile-medium-text);
   min-height: 100%;
+  min-width: 320px;
   margin: 0;
   padding: 0;
 }
@@ -17,10 +18,6 @@ img {
   max-height: 100%;
   object-fit: cover;
   display: block;
-}
-
-a {
-  text-decoration: none;
 }
 
 *,
