--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,6 +7,7 @@
 @import "./common/container";
 @import "./common/section-title";
 @import "./common/sub-title";
+@import "./common/swiper-button";
 @import "./blocks/hero/hero";
 @import "./blocks/hero/promo";
 @import "./blocks/hero/hero-header";
@@ -28,3 +29,4 @@
 @import "./blocks/juri/juri";
 
 @import "./blocks/features/features";
+@import "./blocks/features/feature";
