--- a/source/sass/blocks/features/features.scss
+++ b/source/sass/blocks/features/features.scss
@@ -6,6 +6,12 @@
   padding: 40px 0;
 }
 
+.features__content-wrapper {
+  display: flex;
+  flex-flow: wrap column;
+  gap: 40px
+}
+
 .features__title {
   @include apply-styles($mobile-h3);
   text-align: center;
@@ -24,74 +30,6 @@
   gap: 35px;
 }
 
-.features__item {
-
-  display: flex;
-  flex-flow: wrap column;
-  align-items: center;
-  min-height: 150px;
-  padding: 0 45px;
-  text-align: center;
-  gap: 12px;
-
-  p strong {
-    @include apply-styles($mobile-numbers-large);
-    background: linear-gradient(129deg, #d10a42 0%, #0041ca 100%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-
-  p:first-child {
-    @include apply-styles($mobile-small-text);
-    display: flex;
-    flex-flow: wrap column;
-    align-items: center;
-    color: #2E35AC;
-  }
-
-  div {
-    display: flex;
-    flex-flow: wrap column;
-    gap: 12px;
-  }
-
-  div p {
-    @include apply-styles($mobile-medium-text);
-    margin: 0;
-  }
-
-  h3 {
-    @include apply-styles($mobile-h6);
-    margin: 0;
-  }
-}
-
-.features__item--central {
-  background-color: $secondary-button;
-  min-height: 225px;
-  justify-content: center;
-  padding: 30px 75px 40px;
-  gap: 20px;
-
-  p strong {
-    background-clip: text;
-    background: $white-primary;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    margin: 0 0 5px 0;
-  }
-
-  p {
-    color: $white-primary;
-  }
-
-  p:first-child {
-    @include apply-styles($mobile-h4);
-    color: $white-primary;
-  }
-}
-
 @media #{$not-mobile} {
   .features__features-wrapper {
     padding: 60px 0;
@@ -108,81 +46,6 @@
     justify-content: center;
     gap: 40px 30px;
   }
-
-  .features__item {
-    width: 324px;
-    display: grid;
-    grid-template-columns: min-content 1fr;
-    min-height: 92px;
-    padding: 0;
-    gap: 15px;
-
-    p strong {
-      @include apply-styles($universal-numbers-large);
-      background: linear-gradient(129deg, #d10a42 0%, #0041ca 100%);
-      background-clip: text;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-
-    div {
-      text-align: left;
-      max-width: 240px;
-    }
-
-    p {
-      @include apply-styles($universal-medium-text);
-      margin: 0;
-    }
-
-    p:first-of-type {
-      @include apply-styles($universal-small-text);
-      display: flex;
-      flex-flow: wrap column;
-      align-items: flex-start;
-      justify-content: flex-start;
-      color: #2E35AC;
-    }
-
-    h3 {
-      @include apply-styles($tablet-h6);
-      margin: 0;
-      max-width: 203px;
-    }
-  }
-
-  .features__item--central {
-    background-color: $secondary-button;
-    min-height: 225px;
-    justify-content: center;
-    place-self: center;
-    padding: 35px;
-    gap: 20px;
-    width: 320px;
-    margin: 0 30px 0 0;
-    display: flex;
-
-    p strong {
-      background-clip: text;
-      background: $white-primary;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      margin: 0 0 5px 0;
-    }
-
-    p span {
-      @include apply-styles($tablet-h4)
-    }
-
-    p {
-      color: $white-primary;
-    }
-
-    p:first-child {
-      @include apply-styles($universal-medium-text);
-      color: $white-primary;
-    }
-  }
 }
 
 @media #{$desktop-only} {
@@ -190,57 +53,18 @@
     padding: 100px 0;
   }
 
+  .features__content-wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: start;
+  }
+
   .features__title {
     @include apply-styles($desktop-h3);
   }
 
   .features__list {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-
-  .features__item {
     width: 360px;
-    display: flex;
-    flex-flow: wrap row;
-    min-height: 110px;
-    justify-content: space-between;
-    grid-column: 1/2;
-    grid-row: span 1;
-
-    &:nth-child(2n) {
-      grid-column: 3/4;
-    }
-
-    div {
-      text-align: left;
-      width: 210px;
-    }
-
-    h3 {
-      @include apply-styles($desktop-h6);
-    }
-  }
-
-  .features__item--central {
-    min-height: 300px;
-    justify-content: center;
-    place-self: start;
-    padding: 58px 40px;
-    gap: 30px;
-    width: 360px;
-    margin: 0;
-    display: flex;
-    grid-column: 2/3;
-    // grid-row: 1/ -1;
-    grid-row: 1 / span 2;
-
-    p strong {
-      margin: 0 0 10px 0;
-    }
-
-    p span {
-      @include apply-styles($desktop-h4)
-    }
+    gap: 80px;
   }
 }
