--- a/source/sass/common/button.scss
+++ b/source/sass/common/button.scss
@@ -11,6 +11,7 @@
   padding: 20px 30px;
   transition: color 0.3s $smooth, background 0.3s $smooth, border 0.3s $smooth;
   cursor: pointer;
+  text-decoration: none;
 
   &--button-primary {
     color: $primary;
