--- a/source/sass/blocks/juri/juri.scss
+++ b/source/sass/blocks/juri/juri.scss
@@ -195,8 +195,28 @@
     margin: 0 0 46px 0;
   }
 
+  .juri__button-wrapper {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: 50%;
+    transform: translateY(-50%);
+
+    &--prev {
+      left: 0;
+    }
+
+    &--next {
+      right: 0;
+    }
+  }
+
   .juri__swiper-button {
     display: flex;
+    position: relative;
+    border: none;
+    background-color: transparent;
+    padding: 0;
   }
 
   .juri__swiper-container {
