--- a/source/sass/common/swiper-button.scss
+++ b/source/sass/common/swiper-button.scss
@@ -1,18 +1,33 @@
 .swiper-button {
   width: 50px;
   height: 50px;
-  // position: relative;
+  position: relative;
+  border-radius: 50%;
+  cursor: pointer;
 
-  // &::before {
-  //   position: absolute;
-  //   content: "";
-  //   // top: 0;
-  //   // left: 0;
-  //   // right: 0;
-  //   // bottom: 0;
-  //   border: solid 1px $primary;
-  //   border-radius: 50%;
-  // }
+  &::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border: solid 1px $primary;
+    transition: clip-path 0.3s $smooth, transform 0.3s $smooth, opacity 0.3s $smooth;
+    opacity: 0;
+    transform: scale(1.1);
+  }
+
+  &:hover::before {
+    border-color: $primary;
+    transform: scale(1);
+    opacity: 1;
+  }
+
+  &:not(:hover)::before {
+    border-color: transparent;
+    transform: scale(1.1);
+    opacity: 0;
+  }
 }
-
-// нужно лобавить обертку для кнопки. Спозиционировать её абсолютно. Затем уже можно писать стили для состояний самой кнопки, так как им сейчас не поставить position: relative
