--- a/source/sass/blocks/juri/juri.scss
+++ b/source/sass/blocks/juri/juri.scss
@@ -48,10 +48,7 @@
 }
 
 .juri__swiper-button {
-  // width: 16px;
-  // height: 32px;
   top: 50%;
-  // transform: translateY(50%);
   display: none;
 }
 
@@ -117,6 +114,21 @@
   }
 }
 
+.juri__swiper-slide-overlay::-webkit-scrollbar {
+  width: 8px;
+  max-height: 10px;
+}
+
+.juri__swiper-slide-overlay::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
+}
+
+.juri__swiper-slide-overlay::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+
 .juri__swiper-slide-image-wrapper {
   z-index: -1;
 }
@@ -151,6 +163,20 @@
   width: 100%;
 }
 
+.juri__swiper-slide-header::-webkit-scrollbar {
+  width: 8px;
+  max-height: 10px;
+}
+
+.juri__swiper-slide-header::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
+}
+
+.juri__swiper-slide-header::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
 .juri__swiper-slide-genre {
   @include apply-styles($universal-medium-text);
   width: 52px;
@@ -168,20 +194,6 @@
   padding: 0 50px 0 66px;
   margin: 0;
   z-index: 2;
-}
-
-::-webkit-scrollbar {
-  width: 8px;
-  max-height: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #888;
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: #555;
 }
 
 @media #{$not-mobile} {
